Fix for horizontal scrollbar height.

--- a/src/_base.css
+++ b/src/_base.css
@@ -26,12 +26,11 @@
 
 html {
   box-sizing: border-box;
-  font-size: 62.5%;
-  /* font-size: 10px; */
+  /* font-size: 62.5%; */
+  font-size: 10px;
   line-height: 1.15;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
-  /* background-color: var(--bg-color); */
 }
 
 *, *:before, *:after {
@@ -40,19 +39,18 @@ html {
 
 * {
   scrollbar-width: thin;
-  scrollbar-color: var(--color-lightGrey) var(--bg-primary);
+  scrollbar-color: var(--color-lightGrey) inherit !important;
 }
-
 *::-webkit-scrollbar {
   width: 8px;
+  height: 8px;
+  background-color: inherit!important;
 }
-
 *::-webkit-scrollbar-track {
-  background: var(--bg-primary);
+  background-color: inherit!important;
 }
-
 *::-webkit-scrollbar-thumb {
-  background: var(--color-lightGrey);
+  background: var(--color-lightGrey)!important;
 }
 
 *::-moz-selection { /* Code for Firefox */
